--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,29 +2,21 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-4">
-				<h3>Building a Better World for All of Us</h3>
-				<p>Short Elliot Hendrickson Inc. (SEH) is an employe-owned company of engineers, architects, planners, and scientists serving public and private sector clients.</p>
-				<p>Our work - providing valuable solutions in the Buildings, Energy, Environmental, Infrastructure, Transportation, and Water markets - is focused on Building a Better World for All of Us.</p>
+				<h3></h3>
+				<p></p>
 			</div>
 			<div class="col-md-4">
 				<h3>Follow Us</h3>
 				<ul class="smlinks list-unstyled list-inline">
-					<li class="smicon"><a href="#"><img src="{{site.baseurl}}/img/ft-smi-linkedin.png"></a></li>
-					<li class="smicon"><a href="#"><img src="{{site.baseurl}}/img/ft-smi-facebook.png"></a></li>
-					<li class="smicon"><a href="#"><img src="{{site.baseurl}}/img/ft-smi-twitter.png"></a></li>
-					<li class="smicon"><a href="#"><img src="{{site.baseurl}}/img/ft-smi-youtube.png"></a></li>
+					<li class="smicon"><a href="#"><img src="{{site.baseurl}}/img/"></a></li>
 				</ul>
-				<h3>Learn More About SEH</h3>
-				<p><a href="#">Visit our Company Homepage</a></p>
+				<h3></h3>
+				<p><a href="#"></a></p>
 			</div>
 			<div class="col-md-4">
-				<h3>InSight Print Magazine Archive</h3>
+				<h3></h3>
 				<ul class="list-unstyled">
-					<li><a href="#">Volume 15 | Innovation</a></li>
-					<li><a href="#">Volume 14 | Technology</a></li>
-					<li><a href="#">Volume 13 | Internet of Things</a></li>
-					<li><a href="#">Volume 12 | Giving Back</a></li>
-					<li><a href="#">Volume 11 | Infrastructure</a></li>
+					<li><a href="#"></a></li>
 				</ul>
 			</div>
 		</div>
