--- a/css/styles.css
+++ b/css/styles.css
@@ -3,14 +3,14 @@ html {
 }
 
 body {
-	background-color: #f5f5f5;
+	background-color: #2E6DA4;
 	font-family: "Benton Sans",sans-serif;
 }
 
 h1 {
 	font-size: 86px;
 	line-height: 92px;
-	color: #000;
+	color: #eee;
 	font-weight: bold;
 	max-width: 1200px;
 	text-align: center;
@@ -32,7 +32,7 @@ h2 {
 	color: #333;  
 	max-width: 960px;
 	display: block;*/
-	margin: 0px auto 20px;
+	margin: 0px auto 15px;
 } 
 
 h3 { 
@@ -42,8 +42,20 @@ h3 {
 	max-width: 760px;
 }
 
-.row .col-md-4:nth-child(3n+1) {
-	clear: left;
+.row .col-md-4:nth-child(2n+0) {
+	/*background: blue;*/
+}
+
+ul li {
+	overflow: hidden;
+}
+
+
+
+ul li.row {
+	background: #FFEB3B;
+	padding: 1em .25em 0 0;
+	margin: 1em 0;
 }
 
 .iframe-container {
@@ -91,9 +103,9 @@ h3 {
 }
 
 .post-deck {
-	font-size: 30px; 
-	line-height: 36px; 
-	color: #666; 
+	font-size: 30px;
+	line-height: 36px;
+	color: #fff;
 	max-width: 1200px;
 	text-align: center;
 }
@@ -128,8 +140,15 @@ p {
 }
 
 .time {
-	background: #333;
+	background: #2e6da4;
+	display: table-column;
+	vertical-align: middle;
+	/*padding-top: 2em;
+	border-radius: 100%;
+	height: 7.5em;*/
 }
+
+.time.col-md-2 {}
 
 .time p {
 	margin: 0;
